addressed issue where RequestInfoBanner pop-ups could overflow the boundary of the app and be obscured

--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -38,7 +38,6 @@
 #app {
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
-  overflow-y: hidden;
   padding-bottom: 15px;
 }
 
